Attractions page update
Added a lot to the attractions page mainly, including a lot of pictures that all go for the attractions page. Still more to go on the individual attraction pages though

--- a/hiking.html
+++ b/hiking.html
@@ -73,120 +73,92 @@
         </div>    
 
         <div class="overview-container">
-            <h1>Area Attractions</h1>
-            <p>The beautiful Sanpete valley has so much to offer, from the world famous Arapeen trail system to a long, rich history! Here we've compiled a short list of our favorite activities. But really, you can't go wrong with any of these activites, so follow the links to learn more about what this area has to offer and get started on your next vacation!</p>
+            <h1>Hiking</h1>
+            <p>There are miles and miles of hiking trails throughout the gorgeous Wasatch Mountain Range. Whether it's to an arch, waterfall, or jaw-dropping panoramic views, there's a hike here for you! From easy to strenous, we've listed our top recommended hikes in the area! Read more about our recommended hikes below, or if you want more hikes, we recommend also looking at <a href="https://www.alltrails.com/explore?b_tl_lat=39.8992015115692&b_tl_lng=-112.88177490234375&b_br_lat=38.81403111409755&b_br_lng=-110.291748046875" target="_blank">all trails</a> or <a href="https://www.hikingproject.com/directory/8010492/salt-lake-city-and-wasatch-front" target="_blank">hiking project</a>.</p>
 
-            <!--ATV-->
+            <!--Maple Canyon Loop-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="atv.html"><img src="images/ATV_1.jpg" alt=""></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/maple-canyon-loop-trail--3" target="_blank"><img src="images/hiking_1.jpg" alt=""></a>
                 </div>
-                <div class="attractions-overview-text">
-                    <a href="atv.html"><h3>ATV</h3></a>
-                    <p>Being minutes from the world famous Arapeen trail system, you have over 350,000 acres of interconnecting, beautiful mountain trails. So from your motorcycle to side-by-side, bring your ATV an enjoy the pristine landscape Sanpete Valley has to offer.</p>
+                <div class="attractions-overview-text hiking-overview-text">
+                    <a href="https://www.alltrails.com/trail/us/utah/maple-canyon-loop-trail--3" target="_blank"><h3>Maple Canyon Loop Trail</h3></a>
+                    <p><i class="fas fa-route hiking-icon-left"></i> 2.7 miles<i class="fas fa-mountain hiking-icon"></i> 1,299 feet <span class="hiking-difficulty moderate-hike">&#9632;</span> Moderate</p>
+                    <p>Clear out your phone storage for this hike because I guarantee you'll fill it up with pictures! This hike has it all, an arch, 360&#176; panoramic views, and a cave. This hike is a must!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                    <a href="atv.html"><p>Click here</p><p>for more</p><p>information</p></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/maple-canyon-loop-trail--3" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
                 </div>
             </div>
 
-            <!--Hiking-->
+            <!--Box Canyon-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="hiking.html"><img src="images/hiking_1.jpg" alt=""></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/maples-box-canyon-trail" target="_blank"><img src="images/box-canyon.jpg" alt=""></a>
                 </div>
-                <div class="attractions-overview-text">
-                    <a href="hiking.html"><h3>Hiking</h3></a>
-                    <p>With the Manti-Lasal Mountain Range next door, you have some of the best hiking trails in the Rocky Mountains! From waterfalls and panoramic views to deep forest canopies, there are plenty of hiking trails for all ages and skill levels!</p>
+                <div class="attractions-overview-text hiking-overview-text">
+                    <a href="https://www.alltrails.com/trail/us/utah/maples-box-canyon-trail" target="_blank"><h3>Box Canyon Trail</h3></a>
+                    <p><i class="fas fa-route hiking-icon-left"></i> 1.2 miles<i class="fas fa-mountain hiking-icon"></i> 462 feet <span class="hiking-difficulty moderate-hike">&#9632;</span> Moderate</p>
+                    <p>A unique cobblestone slot canyon with a waterfall and a few boulders to scramble over make this hike unbelievably fun! This is a great short hike to combine with the Maple Canyon Loop Trail nearby.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                    <a href="hiking.html"><p>Click here</p><p>for more</p><p>information</p></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/maples-box-canyon-trail" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
                 </div>
             </div>
 
-            <!--Rock Climbing-->
+            <!--South Tent Mtn-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="rockClimbing.html"><img src="images/rock_climbing_1.jpg" alt=""></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/south-tent-mountain-summit-from-skyline-drive" target="_blank"><img src="images/south-tent-mountain_1.png" alt=""></a>
                 </div>
-                <div class="attractions-overview-text">
-                    <a href="rockClimbing.html"><h3>Rock Climbing</h3></a>
-                    <p>The cobblestone climbing of Maple Canyon is just minutes away from our cabins. Climbers from around the world come to test their skills on Maple Canyon’s unique cobblestone cliffs. With hundreds of climbs, it's easy to find a climb for everyone from novice to expert! </p>
+                <div class="attractions-overview-text hiking-overview-text">
+                    <a href="https://www.alltrails.com/trail/us/utah/south-tent-mountain-summit-from-skyline-drive" target="_blank"><h3>South Tent Mtn Summit</h3></a>
+                    <p><i class="fas fa-route hiking-icon-left"></i> 4.2 miles<i class="fas fa-mountain hiking-icon"></i> 1,059 feet <span class="hiking-difficulty moderate-hike">&#9632;</span> Moderate</p>
+                    <p>South Tent Mtn is the high point in Sanpete county and makes for a gorgeous hike with views of the entire valley! You can make this into a loop with North Tent Mtn for a 7 mile hike or even shorten in to 2 miles!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                    <a href="rockClimbing.html"><p>Click here</p><p>for more</p><p>information</p></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/south-tent-mountain-summit-from-skyline-drive" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
                 </div>
             </div>
 
-            <!--Snowmobiling-->
+            <!--Mt Nebo-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="snowmobiling.html"><img src="images/snowmobile_1.jpg" alt=""></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/andrews-ridge-to-mt-nebo-south-peak" target="_blank"><img src="images/nebo_1.jpg" alt=""></a>
                 </div>
-                <div class="attractions-overview-text">
-                    <a href="snowmobiling.html"><h3>Snowmobiling</h3></a>
-                    <p>Countless miles of untouched powder and bowls that offer some of the best backcountry mountain sledding in the state. SnoWest magazine wrote, "Boondocker’s Heaven- If there was ever a place on earth that could lay claim to that title, it would have to be Utah’s Sanpete County."</p>
+                <div class="attractions-overview-text hiking-overview-text">
+                    <a href="https://www.alltrails.com/trail/us/utah/andrews-ridge-to-mt-nebo-south-peak" target="_blank"><h3>Mount Nebo</h3></a>
+                    <p><i class="fas fa-route hiking-icon-left"></i> 8.8 miles<i class="fas fa-mountain hiking-icon"></i> 5,728 feet <span class="hiking-difficulty difficult-hike">&#9670;</span> Difficult</p>
+                    <p>Mt Nebo is the highest peak in the Wasatch Range at a staggering 11,929 feet! There are several trails to the summit (this one likely being the most difficult, but also the most beautiful and our favorite)!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                    <a href="snowmobiling.html"><p>Click here</p><p>for more</p><p>information</p></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/andrews-ridge-to-mt-nebo-south-peak" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
                 </div>
             </div>
 
-            <!--Mountain Biking-->
+            <!--Milky Falls-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="mtnBiking.html"><img src="images/mtn_bike_1.jpg" alt=""></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/milky-falls" target="_blank"><img src="images/milky_falls_1.jpg" alt=""></a>
                 </div>
-                <div class="attractions-overview-text">
-                    <a href="mtnBiking.html"><h3>Mountain Biking</h3></a>
-                    <p>Have you ever rode a mountain bike over 50 miles at an altitude of nearly 10,000 feet? Skyline Drive has breathtaking views that will Expand your outlook on life. This area offers many single or multi-day adventures for you to enjoy on your bike.</p>
+                <div class="attractions-overview-text hiking-overview-text">
+                    <a href="https://www.alltrails.com/trail/us/utah/milky-falls" target="_blank"><h3>Milky Falls Trail</h3></a>
+                    <p><i class="fas fa-route hiking-icon-left"></i> 0.2 miles<i class="fas fa-mountain hiking-icon"></i> 36 feet <span class="hiking-difficulty easy-hike">&#9679;</span> Easy</p>
+                    <p>This is a very easy hike with a gorgeous cascading waterfall. I recommend combining this hike with several ATV or mountain biking trails in the area.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                    <a href="mtnBiking.html"><p>Click here</p><p>for more</p><p>information</p></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/milky-falls" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
                 </div>
             </div>
 
-            <!--History-->
-            <div class="attractions-overview-container">
-                <div class="attractions-overview-image">
-                        <a href="history.html"><img src="images/history_1.jpg" alt=""></a>
-                </div>
-                <div class="attractions-overview-text">
-                    <a href="history.html"><h3>History</h3></a>
-                    <p>Sanpete’s Heritage is prevalent today with many buildings built in the 1800’s. Native American sites, historic buildings, and cultural sites draw history and culture buffs to this area. Forbes listed neighboring town Spring City, UT as one of the top prettiest towns in America.</p>
-                </div>
-                <div class="attractions-overview-clickHere">
-                    <a href="history.html"><p>Click here</p><p>for more</p><p>information</p></a>
-                </div>
-            </div>
-
-            <!--Sightseeing-->
-            <div class="attractions-overview-container">
-                <div class="attractions-overview-image">
-                        <a href="sightseeing.html"><img src="images/sightseeing_1.jpg" alt=""></a>
-                </div>
-                <div class="attractions-overview-text">
-                    <a href="sightseeing.html"><h3>Sightseeing</h3></a>
-                    <p>Sanpete has so much to offer and see. With hundreds of thousands of acres of gorgeous mountain forests, there are more scenic, panoramic views than you can take pictures of! So make sure to clear out your phone storage so you have room for the photos!</p>
-                </div>
-                <div class="attractions-overview-clickHere">
-                    <a href="sightseeing.html"><p>Click here</p><p>for more</p><p>information</p></a>
-                </div>
-            </div>
-
-            <!--Other-->
-            <div class="attractions-overview-container">
-                <div class="attractions-overview-image">
-                        <a href="otherAttractions.html"><img src="images/yuba-lake_1.jpg" alt="https://www.bluewavejetskirentals.com/jet-ski-rentals-yuba-lake-ut/"></a>
-                </div>
-                <div class="attractions-overview-text">
-                    <a href="otherAttractions.html"><h3>And So Much More</h3></a>
-                    <p>From state parks to boating and snowkiting, Sanpete valley is an outdoor paradise! There is something here for everyone, including a full scale replica of a nearly fully intact Columbian mammoth that was unearthed here in 1988, art museums, and many more family-fun activities!</p>
-                </div>
-                <div class="attractions-overview-clickHere">
-                    <a href="otherAttractions.html"><p>Click here</p><p>for more</p><p>information</p></a>
-                </div>
-            </div>
+            <h2>Additional Resources</h2>
+            <ul>
+                <li><a href="https://www.alltrails.com/explore?b_tl_lat=39.8992015115692&b_tl_lng=-112.88177490234375&b_br_lat=38.81403111409755&b_br_lng=-110.291748046875" target="_blank">All Trails</a></li>
+                <li><a href="https://www.hikingproject.com/directory/8010492/salt-lake-city-and-wasatch-front" target="_blank">Hiking Project</a></li>
+                <li><a href="https://www.heraldextra.com/sanpete-county/special-section/rec-guide/explore-sanpete-s-numerous-backcountry-trails/article_3e6a51ad-e6e0-5577-b1c5-bbf169cf4085.html" target="_blank">Herald Extra</a></li>
+                <li><a href="https://www.anyplaceamerica.com/directory/ut/sanpete-county-49039/trails/" target="_blank">AnyPlaceAmerica</a></li>
+                <li><a href="http://www.girlonahike.com/search/label/Central%20Utah" target="_blank">Girl On A Hike</a></li>
+            </ul>
 
         </div>
 
