--- a/history.html
+++ b/history.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset=utf-8>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Country Cabins at Sheldon R. Larson Ranch</title>
+        <title>Historical Sites near Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icons/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="http://sanpete.com/businesses/show/313-fairview-museum-of-history-and-art" target="_blank"><h3>Intact Columbian Mammoth</h3></a>
-                    <p>That's right, Fairview Museum of History and Art houses a nearly fully intact Columbian mammoth that was unearthed only miles away in 1988. The quality and altitude at which it was found make this remarkable well-preserved!</p>
+                    <p>That's right, Fairview Museum of History and Art houses a nearly fully intact Columbian mammoth that was unearthed only miles away in 1988. The quality and altitude at which it was found make this remarkably well-preserved!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="http://sanpete.com/businesses/show/313-fairview-museum-of-history-and-art" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
