--- a/mainCabin.html
+++ b/mainCabin.html
@@ -110,14 +110,13 @@
                 <a href="#main-cabin-amenities"><p>Amenities</p></a>
                 <a href="#main-cabin-information"><p>Information</p></a>
                 <a href="#main-cabin-rates"><p>Rates</p></a>
-                <a href="#main-cabin-reviews"><p>Reviews</p></a>
             </div>
 
             <div class="cabin-description-text-area">
                 <h2 id="main-cabin-description">Description</h2>
                 <p>The Sheldon R. Larson Ranch is located in the heart of the Sanpete Valley, four miles west of Ephraim. This working ranch is located minutes from the famous Arapeen trail system, with world-class ATVing, snowmobiling, hiking, and rock climbing. Great for both summer and winter enthusiasts looking for a classic and fun cabin experience with easy access to world-class outdoors!</p>
                 <h2 id="main-cabin-theSpace">The Space</h2>
-                <p>The main cabin has a master bedroom on the ground floor. There is also a large loft area, accessible by ladder stairs, which overlooks the living room and has 3 beds and plenty of room!</p>
+                <p>The main cabin has a master bedroom with a king-sized bed on the ground floor. There is also a large loft area, accessible by ladder stairs, which overlooks the living room and has 3 beds (a queen and 2 single-sized beds), balcony access, and plenty of room!</p>
                 <p>Enjoy quiet peaceful nights by the fire after a day of four-wheeling, snowmobiling, hiking, fishing, horseback riding or sightseeing in the nearby national forest. Enjoy easy access to the many ATV trails in the Arapeen trail system accessible from your doorstep.</p>
                 <p>Conveniently located near Ephraim and Manti, it is the gateway to the Manti-La Sal National Forest and other local attractions for both outdoor adventurists and those who want to enjoy the many quaint historical sites the Sanpete Valley has to offer.</p>
                 <p>The spacious accommodations of the ranch offer plenty of parking for all the toys (RV, Campers, toy haulers, etc). There is a beautiful lawn for tent camping and large groups. Horse corrals are available for boarding if desired. Both are available with prior arrangement and additional camping/boarding fees.</p>
@@ -190,9 +189,6 @@
                         <td>$1200 /week</td>
                     </tr>
                 </table>
-
-                <h2 id="main-cabin-reviews">Reviews</h2>
-                <script src="https://www.powr.io/powr.js?platform=html"></script><div class="powr-reviews cabin-reviews" id="84dd2cea_1565922283"></div>
 
             </div>
         </div>
