--- a/mtnBiking.html
+++ b/mtnBiking.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset=utf-8>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Country Cabins at Sheldon R. Larson Ranch</title>
+        <title>Mountain Biking near Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icons/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
