--- a/overview.html
+++ b/overview.html
@@ -77,7 +77,7 @@
             <div class="overview-text-container">
                 <div>
                     <h6>Welcome to the<br>Sheldon R. Larson Ranch</h6><br>
-                    <p>The Sheldon R. Larson Ranch is located minutes from the famous Arapeen trail system, with world-class ATVing, snowmobiling, hiking, rock climbing, and more! 
+                    <p class="test-text">The Sheldon R. Larson Ranch is located minutes from the famous Arapeen trail system, with world-class ATVing, snowmobiling, hiking, rock climbing, and more! 
                     <br><br>This working ranch is located in the heart of the Sanpete Valley, three miles west of Ephraim, Utah, with easy access to mountains on the east and the west.
                     <br><br>Great for both summer and winter enthusiasts looking for a classic and fun cabin experience with easy access to world-class outdoors!</p>
                 </div>
